添加百度统计的js代码

--- a/snow_launcher_downloader_direct.html
+++ b/snow_launcher_downloader_direct.html
@@ -27,5 +27,16 @@
         <button id="download" onclick="download_launcher('direct')">下载</button>
     </div>
     <script src="snow_launcher_downloader.js"></script>
+
+    <!-- 添加百度统计代码 -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?4b2446b879c1e5bf19eaf3a1ff240f35";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </body>
 </html>
