--- a/snow_launcher_downloader.html
+++ b/snow_launcher_downloader.html
@@ -33,6 +33,17 @@
     </div>
     <p id="status">无下载进度</p>
     <script src="snow_launcher_downloader.js"></script>
+
+    <!-- 添加百度统计代码 -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?4b2446b879c1e5bf19eaf3a1ff240f35";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </body>
 
 </html>
