添加visitor-badge提供的访客量统计徽章

--- a/snow_launcher_downloader.html
+++ b/snow_launcher_downloader.html
@@ -34,6 +34,8 @@
     <p id="status">无下载进度</p>
     <script src="snow_launcher_downloader.js"></script>
 
+    <img src="https://visitor-badge.glitch.me/badge?page_id=LiuJiewenTT.visitor-badge.snow_launcher_downloader" alt="visitor badge"/>
+
     <!-- 添加百度统计代码 -->
     <script>
         var _hmt = _hmt || [];
