--- a/snow_launcher_downloader_direct.html
+++ b/snow_launcher_downloader_direct.html
@@ -28,6 +28,8 @@
     </div>
     <script src="snow_launcher_downloader.js"></script>
 
+    <img src="https://visitor-badge.glitch.me/badge?page_id=LiuJiewenTT.visitor-badge.snow_launcher_downloader" alt="visitor badge"/>
+
     <!-- 添加百度统计代码 -->
     <script>
         var _hmt = _hmt || [];
