--- a/snow_launcher_downloader.html
+++ b/snow_launcher_downloader.html
@@ -36,6 +36,8 @@
 
     <img src="https://visitor-badge.glitch.me/badge?page_id=LiuJiewenTT.visitor-badge.snow_launcher_downloader" alt="visitor badge"/>
 
+    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FLiuJiewenTT%2Fsnow_launcher_downloader&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+
     <!-- 添加百度统计代码 -->
     <script>
         var _hmt = _hmt || [];
