--- a/snow_launcher_downloader.html
+++ b/snow_launcher_downloader.html
@@ -38,6 +38,7 @@
         <p>自2025年3月19日以来的累计访问量：</p>
         <img src="https://visitor-badge.glitch.me/badge?page_id=LiuJiewenTT.visitor-badge.snow_launcher_downloader" alt="visitor badge"/>
         <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FLiuJiewenTT%2Fsnow_launcher_downloader&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+        <a href="https://hits.sh/liujiewentt.github.io/snow_launcher_downloader/snow_launcher_downloader/"><img alt="Hits" src="https://hits.sh/liujiewentt.github.io/snow_launcher_downloader/snow_launcher_downloader.svg"/></a>
     </div>
 
     
