优化SEO和项目描述

--- a/snow_launcher_downloader_direct.html
+++ b/snow_launcher_downloader_direct.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="《尘白禁区》的尘白启动器下载站，提供B服、官服和国际服最新版本的尘白启动器下载">
-    <meta name="keywords" content="尘白禁区,尘白启动器下载,Snowbreak,游戏下载,Launcher download,CBJQ">
+    <meta name="description" lang="zh" content="《尘白禁区》的尘白启动器下载站，提供B服、官服和国际服最新版本的尘白启动器下载">
+    <meta name="description" lang="en" content="Snowbreak(Game) launcher(snow launcher variant) download site. Suitable for Bilibili, Jinshan(official) and worldwide servers.">
+    <meta name="keywords" content="尘白禁区,尘白启动器,尘白启动器下载,Snowbreak,游戏下载,CBJQ,snow launcher download,snowbreak launcher download,snowbreak download,尘白禁区下载">
     <link rel="stylesheet" href="style.css">
 	<title>Snow Launcher Downloader</title>
     <script>
