优化默认的网站标题

--- a/snow_launcher_downloader_direct.html
+++ b/snow_launcher_downloader_direct.html
@@ -7,13 +7,15 @@
     <meta name="description" lang="en" content="Snowbreak(Game) launcher(snow launcher variant) download site. Suitable for Bilibili, Jinshan(official) and worldwide servers.">
     <meta name="keywords" content="尘白禁区,尘白启动器,尘白启动器下载,Snowbreak,游戏下载,CBJQ,snow launcher download,snowbreak launcher download,snowbreak download,尘白禁区下载">
     <link rel="stylesheet" href="style.css">
-	<title>Snow Launcher Downloader</title>
+	<title>尘白启动器下载站 - Snow Launcher Downloader (下载尘白禁区/Download Snowbreak)</title>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const isChinese = /^zh/.test(navigator.language || navigator.userLanguage);
             if (isChinese) {
                 document.title = '尘白启动器下载站';
                 document.querySelector('h1').textContent = '尘白启动器下载站';
+            } else {
+                document.title = 'Snow Launcher Downloader';
             }
         });
     </script>
