暂存部分改造内容（第一阶段）

--- a/snow_launcher_downloader.html
+++ b/snow_launcher_downloader.html
@@ -23,8 +23,10 @@
 </head>
 
 <body>
-    <h1>Snow Launcher Downloader</h1>
-    <div class="container">
+    <div id="background-container"></div>
+    <div class="content-overlay">
+        <h1>Snow Launcher Downloader</h1>
+        <div class="container">
         <div id="server_form">
             <span>版本:</span>
             <label>
