成功添加背景，但是样式被严重污染

--- a/snow_launcher_downloader.html
+++ b/snow_launcher_downloader.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 
-<body>
+<body class="no-webp">
     <div id="background-container"></div>
     <div class="content-overlay">
         <h1>Snow Launcher Downloader</h1>
